--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,37 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--suppress AndroidDomInspection -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.opsc7312_assign1_15002928.opsc7312_assign1_15002928">
-
+    package="com.leczisoul.googlemapapp">
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
-
-    <uses-permission android:name="in.wptrafficanalyzer.locationnearby.permission.MAPS_RECEIVE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="com.javapapers.android.googleplacesdetail.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permisson.READ_GSERVICES" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.opsc7312_assign1_15002928.opsc7312_assign1_15002928.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name="com.opsc7312_assign1_15002928.opsc7312_assign1_15002928.Question1a" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -45,14 +32,14 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name="com.opsc7312_assign1_15002928.opsc7312_assign1_15002928.Question1b"
-            android:label="@string/title_activity_question1b" />
-        <activity
-            android:name="com.opsc7312_assign1_15002928.opsc7312_assign1_15002928.Question2"
-            android:label="@string/title_activity_question2" />
-        <activity android:name="com.opsc7312_assign1_15002928.opsc7312_assign1_15002928.HowToUse"></activity>
-        <activity android:name="com.opsc7312_assign1_15002928.opsc7312_assign1_15002928.MyPlace"></activity>
-        <activity android:name="com.opsc7312_assign1_15002928.opsc7312_assign1_15002928.MyPlaceList"></activity>
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
